--- a/hw-01/index.html
+++ b/hw-01/index.html
@@ -7,10 +7,10 @@
     <title>Homework Module 1</title>
   </head>
   <body>
-    <!-- <script type="module" src="./js/task-01.js"></script> -->
-    <!-- <script type="module" src="./js/task-02.js"></script> -->
-    <!-- <script type="module" src="./js/task-03.js"></script> -->
-    <!-- <script type="module" src="./js/task-04.js"></script> -->
+    <script type="module" src="./js/task-01.js"></script>
+    <script type="module" src="./js/task-02.js"></script>
+    <script type="module" src="./js/task-03.js"></script>
+    <script type="module" src="./js/task-04.js"></script>
     <script type="module" src="./js/task-05.js"></script>
     <script type="module" src="./js/task-06.js"></script>
   </body>
