--- a/hw-07/index.html
+++ b/hw-07/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="container">
       <!-- TASK 1 -->
-      <!-- <ul id="categories">
+      <ul id="categories">
         <li class="item">
           <h2 class="item-name">Животные</h2>
-  
+
           <ul class="item-list">
             <li>Кот</li>
             <li>Хомяк</li>
@@ -23,7 +23,7 @@
         </li>
         <li class="item">
           <h2 class="item-name">Продукты</h2>
-  
+
           <ul class="item-list">
             <li>Хлеб</li>
             <li>Петрушка</li>
@@ -32,7 +32,7 @@
         </li>
         <li class="item">
           <h2 class="item-name">Технологии</h2>
-  
+
           <ul class="item-list">
             <li>HTML</li>
             <li>CSS</li>
@@ -41,24 +41,38 @@
             <li>Node</li>
           </ul>
         </li>
-      </ul> -->
+      </ul>
       <!-- TASK 2 -->
-      <!-- <ul id="ingredients"></ul> -->
+      <ul id="ingredients"></ul>
       <!-- TASK 3 -->
-      <!-- <ul id="gallery"></ul> -->
+      <ul id="gallery"></ul>
       <!-- TASK 4 -->
       <div id="counter">
         <button type="button" data-action="decrement">-1</button>
         <span id="value">0</span>
         <button type="button" data-action="increment">+1</button>
       </div>
+      <!-- TASK 5 -->
+      <input type="text" placeholder="Ваше имя?" id="name-input" />
+      <h1>Привет, <span id="name-output"></span>!</h1>
+      <!-- TASK 6 -->
+      <input
+        type="text"
+        id="validation-input"
+        data-length="6"
+        placeholder="Введи 6 символов"
+      />
+      <!-- TASK 7 -->
+      <input id="font-size-control" type="range" />
+      <br />
+      <span id="text">Абракадабра!</span>
     </div>
-    <!-- <script type="module" src="./js/task-01.js"></script> -->
-    <!-- <script type="module" src="./js/task-02.js"></script> -->
-    <!-- <script type="module" src="./js/task-03.js"></script> -->
+    <script type="module" src="./js/task-01.js"></script>
+    <script type="module" src="./js/task-02.js"></script>
+    <script type="module" src="./js/task-03.js"></script>
     <script type="module" src="./js/task-04.js"></script>
-    <!-- <script type="module" src="./js/task-05.js"></script> -->
-    <!-- <script type="module" src="./js/task-06.js"></script> -->
-    <!-- <script type="module" src="./js/task-07.js"></script> -->
+    <script type="module" src="./js/task-05.js"></script>
+    <script type="module" src="./js/task-06.js"></script>
+    <script type="module" src="./js/task-07.js"></script>
   </body>
 </html>
