js hw-07 update #1

--- a/hw-07/index.html
+++ b/hw-07/index.html
@@ -54,7 +54,7 @@
       </div>
       <!-- TASK 5 -->
       <input type="text" placeholder="Ваше имя?" id="name-input" />
-      <h1>Привет, <span id="name-output"></span>!</h1>
+      <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
       <!-- TASK 6 -->
       <input
         type="text"
